--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -15,6 +15,7 @@
       "@version-checker/browser": "^3.1.0",
       "@version-checker/core": "^3.1.0",
       "bootstrap": "^5.3.7",
+      "flexsearch": "^0.8.205",
       "preact": "^10.22.0",
       "preact-i18n": "^2.4.0-preactx",
       "react-responsive": "^10.0.0"
