--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <groupId>us.ullberg</groupId>
   <artifactId>startpunkt</artifactId>
-  <version>1.1.0</version>
+  <version>1.2.0-SNAPSHOT</version>
 
   <scm>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-    <tag>v1.1.0</tag>
+    <tag>v0.9.7</tag>
   </scm>
 
   <properties>
@@ -476,7 +476,7 @@
                 <requireJavaVersion>
                   <version>[21,22)</version>
                 </requireJavaVersion>
-                <dependencyConvergence></dependencyConvergence>
+                <dependencyConvergence />
               </rules>
               <fail>true</fail>
             </configuration>
@@ -489,8 +489,8 @@
         <version>2.44.5</version>
         <configuration>
           <java>
-            <googleJavaFormat></googleJavaFormat>
-            <removeUnusedImports></removeUnusedImports>
+            <googleJavaFormat />
+            <removeUnusedImports />
           </java>
         </configuration>
         <executions>
