--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -80,8 +80,8 @@ jobs:
         with:
           check_name: "Test Results - JVM"
           files: |
-            '**/target/surefire-reports/*.xml'
-            '**/test-results/jest/*.xml
+            **/target/surefire-reports/*.xml
+            **/test-results/jest/*.xml
 
   native-build-test:
     runs-on: ubuntu-latest
@@ -127,5 +127,5 @@ jobs:
         with:
           check_name: "Test Results - Native"
           files: |
-            '**/target/surefire-reports/*.xml'
-            '**/test-results/jest/*.xml
+            **/target/surefire-reports/*.xml
+            **/test-results/jest/*.xml
