--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,54 @@
   <artifactId>startpunkt</artifactId>
   <version>1.2.0-SNAPSHOT</version>
 
+  <name>Startpunkt</name>
+  <description>Startpunkt is a clean start page to display links to your self-hosted resources in your Kubernetes cluster.</description>
+  <url>https://github.com/ullbergm/startpunkt</url>
+  <inceptionYear>2024</inceptionYear>
+  <organization>
+    <name>Magnus Ullberg</name>
+    <url>https://github.com/ullbergm</url>
+  </organization>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+      <comments>Copyright (c) 2024 Magnus Ullberg
+      Permission is hereby granted, free of charge, to any person obtaining a copy
+      of this software and associated documentation files (the "Software"), to deal
+      in the Software without restriction, including without limitation the rights
+      to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+      copies of the Software, and to permit persons to whom the Software is
+      furnished to do so, subject to the conditions in LICENSE.
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.</comments>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <id>ullbergm</id>
+      <name>Magnus Ullberg</name>
+      <email>ullbergm@gmail.com</email>
+      <organization>Magnus Ullberg</organization>
+      <organizationUrl>https://github.com/ullbergm</organizationUrl>
+      <roles>
+        <role>maintainer</role>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+      <timezone>America/New_York</timezone>
+    </developer>
+  </developers>
   <scm>
+    <connection>scm:git:https://github.com/ullbergm/startpunkt.git</connection>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-    <tag>v0.9.7</tag>
+    <tag>HEAD</tag>
+    <url>https://github.com/ullbergm/startpunkt</url>
   </scm>
+  <issueManagement>
+    <system>GitHub Issues</system>
+    <url>https://github.com/ullbergm/startpunkt/issues</url>
+  </issueManagement>
 
   <properties>
     <!-- General -->
@@ -421,7 +465,6 @@
         <version>${surefire-plugin.version}</version>
       </plugin>
 
-      <!-- Optionally, for full Maven site: -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
