--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,12 +15,12 @@ startpunkt:
   # Kubernetes integration, read ingress resources
   ingress:
     enabled: true  # If true, enable the reading of ingress resources
-    onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
+    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
   # OpenShift integration, read OpenShift Routes
   openshift:
     enabled: true  # If true, enable the reading of OpenShift Route resources
-    onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
+    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
@@ -30,13 +30,13 @@ startpunkt:
   istio:
     virtualservice:
       enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
-      onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
+      onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
   # GatewayAPI HTTPRoute integration, read GatewayAPI HTTPRoute resources
   gatewayapi:
     httproute:
-      enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
-      onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
+      enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
+      onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
   # Web ui configuration
   web:
