test using a dev branch
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,9 @@
       "npm:unpublishSafe",
       ":maintainLockFilesWeekly"
    ],
+   "baseBranch": "dev",
+   "automerge": true,
+   "automergeType": "pr",
    "prHourlyLimit": 5,
    "commitMessageTopic": "{{depName}}",
    "commitMessageExtra": "to {{newVersion}}",
