feat: Update Bookmark and Application CRDs to v1alpha3
- Changed Bookmark and Application CRDs to version v1alpha3, including updates to their specifications and status classes.
- Added support for tags in Application and Bookmark specifications for enhanced filtering capabilities.
- Implemented tag filtering logic in the application resource, allowing users to filter applications based on tags via URL parameters.
- Introduced comprehensive documentation for object tag filtering, detailing usage and examples.
- Added unit tests for tag parsing and API endpoint construction to ensure correct functionality.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/deploy/kubernetes/startpunkt-jvm.yaml
+++ b/deploy/kubernetes/startpunkt-jvm.yaml
@@ -100,7 +100,58 @@ spec:
     singular: "application"
   scope: "Namespaced"
   versions:
-  - name: "v1alpha2"
+  - name: "v1alpha3"
+    schema:
+      openAPIV3Schema:
+        properties:
+          spec:
+            properties:
+              enabled:
+                description: "Enable the bookmark"
+                type: "boolean"
+              group:
+                description: "Group the bookmark belongs to"
+                type: "string"
+              icon:
+                description: "Application icon, e.g. 'mdi:home', 'https://example.com/icon.png'"
+                type: "string"
+              iconColor:
+                description: "Application icon color, e.g. 'red'"
+                type: "string"
+              info:
+                description: "Description of the bookmark"
+                type: "string"
+              location:
+                description: "Sorting order of the bookmark"
+                type: "integer"
+              name:
+                description: "Application name"
+                type: "string"
+              rootPath:
+                description: "Root path to append to the URL"
+                type: "string"
+              tags:
+                description: "Comma-separated tags for filtering applications"
+                type: "string"
+              targetBlank:
+                description: "Open the URL in a new tab"
+                type: "boolean"
+              url:
+                description: "Application URL"
+                type: "string"
+            required:
+            - "name"
+            - "url"
+            type: "object"
+          status:
+            type: "object"
+        type: "object"
+    served: true
+    storage: true
+    subresources:
+      status: {}
+  - deprecated: true
+    name: "v1alpha2"
     schema:
       openAPIV3Schema:
         properties:
@@ -144,7 +195,7 @@ spec:
             type: "object"
         type: "object"
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
   - deprecated: true
@@ -205,7 +256,7 @@ spec:
     singular: "bookmark"
   scope: "Namespaced"
   versions:
-  - name: "v1alpha2"
+  - name: "v1alpha3"
     schema:
       openAPIV3Schema:
         properties:
@@ -242,6 +293,46 @@ spec:
         type: "object"
     served: true
     storage: true
+    subresources:
+      status: {}
+  - deprecated: true
+    name: "v1alpha2"
+    schema:
+      openAPIV3Schema:
+        properties:
+          spec:
+            properties:
+              group:
+                description: "Group the bookmark belongs to"
+                type: "string"
+              icon:
+                description: "Bookmark icon, e.g. 'mdi:home', 'https://example.com/icon.png'"
+                type: "string"
+              info:
+                description: "Description of the bookmark"
+                type: "string"
+              location:
+                description: "Sorting order of the bookmark"
+                type: "integer"
+              name:
+                description: "Bookmark name"
+                type: "string"
+              targetBlank:
+                description: "Open the URL in a new tab"
+                type: "boolean"
+              url:
+                description: "Bookmark URL"
+                type: "string"
+            required:
+            - "group"
+            - "name"
+            - "url"
+            type: "object"
+          status:
+            type: "object"
+        type: "object"
+    served: true
+    storage: false
     subresources:
       status: {}
   - deprecated: true
