fix: update workflow conditions for better event handling and add SPA routing support
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.quinoa.package-manager-install.node-version=20.11.1
 quarkus.quinoa.package-manager-install.npm-version=10.8.1
 quarkus.quinoa.package-manager-install.pnpm-version=8.15.3
 quarkus.quinoa.package-manager=npm
+quarkus.quinoa.enable-spa-routing=true
 
 quarkus.helm.name=startpunkt
 quarkus.helm.description=Deploy the Startpunkt application
