--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>us.ullberg</groupId>
   <artifactId>startpunkt</artifactId>
-  <version>2.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
 
   <name>Startpunkt</name>
   <description>Startpunkt is a clean start page to display links to your self-hosted resources in your Kubernetes cluster.</description>
@@ -575,7 +575,7 @@
                 <requireJavaVersion>
                   <version>[21,22)</version>
                 </requireJavaVersion>
-                <dependencyConvergence></dependencyConvergence>
+                <dependencyConvergence />
               </rules>
               <fail>true</fail>
             </configuration>
@@ -588,8 +588,8 @@
         <version>2.46.1</version>
         <configuration>
           <java>
-            <googleJavaFormat></googleJavaFormat>
-            <removeUnusedImports></removeUnusedImports>
+            <googleJavaFormat />
+            <removeUnusedImports />
           </java>
         </configuration>
         <executions>
