refactor: Update namespace selector handling in ApplicationResource and BookmarkService; add tests for specific and empty namespace configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Maven Site
 
 on:
   push:
-    branches: [cleanup]
+    branches: [main]
 
 permissions:
   contents: write  # Required for deploying to GitHub Pages
