--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -15,6 +15,7 @@ on:
       - "Build and test"
     branches:
       - dev
+      - main
     types:
       - completed
   push:
@@ -47,7 +48,7 @@ jobs:
             echo "workflow run conclusion: ${{ github.event.workflow_run.conclusion }}"
 
             echo "run=${{
-              (github.repository == 'ullbergm/startpunkt' && ((github.ref == 'refs/heads/dev') || startsWith(github.ref, 'refs/tags/v'))) &&
+              (github.repository == 'ullbergm/startpunkt' && ((github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v'))) &&
               (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && (github.event.workflow_run.event == 'push' || github.event.workflow_run.event == 'workflow_dispatch') && github.event.workflow_run.conclusion == 'success'))
             }}" >>$GITHUB_OUTPUT
 
