--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>us.ullberg</groupId>
   <artifactId>startpunkt</artifactId>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.1.2</version>
 
   <name>Startpunkt</name>
   <description>Startpunkt is a clean start page to display links to your self-hosted resources in your Kubernetes cluster.</description>
@@ -47,7 +47,7 @@
   <scm>
     <connection>scm:git:https://github.com/ullbergm/startpunkt.git</connection>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-    <tag>v2.1.1</tag>
+    <tag>v2.1.2</tag>
     <url>https://github.com/ullbergm/startpunkt</url>
   </scm>
   <issueManagement>
@@ -584,7 +584,7 @@
                 <requireJavaVersion>
                   <version>[21,22)</version>
                 </requireJavaVersion>
-                <dependencyConvergence />
+                <dependencyConvergence></dependencyConvergence>
               </rules>
               <fail>true</fail>
             </configuration>
@@ -597,8 +597,8 @@
         <version>3.0.0</version>
         <configuration>
           <java>
-            <googleJavaFormat />
-            <removeUnusedImports />
+            <googleJavaFormat></googleJavaFormat>
+            <removeUnusedImports></removeUnusedImports>
           </java>
         </configuration>
         <executions>
