--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Setup Java ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v5
