--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -24,7 +24,7 @@ env:
   JAVA_VERSION: '21'
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: read
 
 jobs:
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          token: ''
           ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Setup Java ${{ env.JAVA_VERSION }}
