fix(release): specify repository in checkout step
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
+          repository: ullbergm/startpunkt
           fetch-depth: 0
           ssh-key: ${{ secrets.DEPLOY_KEY }}
 
