--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
   </developers>
   <scm>
     <connection>scm:git:https://github.com/ullbergm/startpunkt.git</connection>
-    <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:ullbergm/startpunkt.git</developerConnection>
     <tag>v2.1.2</tag>
     <url>https://github.com/ullbergm/startpunkt</url>
   </scm>
