Add WebSocketMessage and WebSocketEventType to reflection configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/src/main/resources/META-INF/native-image/reflection-config.json
+++ b/src/main/resources/META-INF/native-image/reflection-config.json
@@ -34,5 +34,17 @@
     "allDeclaredConstructors": true,
     "allDeclaredMethods": true,
     "allDeclaredFields": true
+  },
+  {
+    "name": "us.ullberg.startpunkt.websocket.WebSocketMessage",
+    "allDeclaredConstructors": true,
+    "allDeclaredMethods": true,
+    "allDeclaredFields": true
+  },
+  {
+    "name": "us.ullberg.startpunkt.websocket.WebSocketEventType",
+    "allDeclaredConstructors": true,
+    "allDeclaredMethods": true,
+    "allDeclaredFields": true
   }
 ]
